--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@clerk/clerk-react": "^5.13.1",
     "@clerk/clerk-sdk-node": "^5.0.54",
     "@clerk/nextjs": "^6.0.2",
@@ -27,7 +29,9 @@
     "clsx": "^2.1.1",
     "convex": "^1.17.0",
     "date-fns": "^4.1.0",
+    "html-docx-js": "^0.3.1",
     "lucide-react": "^0.453.0",
+    "mammoth": "^1.9.0",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,6 +42,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/html-docx-js": "^0.3.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
