--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.17.0",
     "date-fns": "^4.1.0",
+    "handlebars": "^4.7.8",
     "html-docx-js": "^0.3.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.453.0",
     "mammoth": "^1.9.0",
+    "mime-types": "^3.0.1",
     "next": "15.0.1",
+    "nodemailer": "^6.10.1",
+    "npm": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
@@ -44,6 +50,7 @@
   "devDependencies": {
     "@types/html-docx-js": "^0.3.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
